@@ -31,3 +31,4 @@ orangedress.shp
 bluedress.shp
 death_scythe.shp
 firewand.shp
+knife.shp
